[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simuth"
version = "0.1.0"
description = "Collection of sorting algorithms in Python I did while I was bored"
keywords = ["sorting", "algorithms", "bubble sort", "quick sort", "merge sort", "heap sort"]
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "traxhcxn" }]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]